working on io reset

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,6 +16,7 @@
 </head>
 <body>
 <ul id="messages"></ul>
+<button id="reset">Reset</button>
 <form action="">
 	<input id="m" autocomplete="off" /><button>Send</button>
 </form>
