--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,37 +2,37 @@
 <html>
 <head>
 <style>
-	* { margin: 0; padding: 0; box-sizing: border-box; }
-	body { font: 13px Helvetica, Arial; }
-	form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-	form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-	form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-	#messages { list-style-type: none; margin: 0; padding: 0; }
-	#messages li { padding: 5px 10px; }
-	#messages li:nth-child(odd) { background: #eee; }
+	#word {
+		text-align: center;
+	}
 </style>
 <script src="/socket.io/socket.io.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 </head>
 <body>
-<ul id="messages"></ul>
-<button id="reset">Reset</button>
+<div id="word"></div>
 <form action="">
-	<input id="m" autocomplete="off" /><button>Send</button>
+	<input id="w" autocomplete="off" /><button>Send</button>
 </form>
+<button id="restart">Restart</button>
+
 	<script>
 	var socket = io();
   $('form').submit(function(){
-    socket.emit('chat message', $('#m').val());
-    $('#m').val('');
+    socket.emit('new word', $('#w').val());
+    $('#w').val('');
     return false;
   });
-  // socket.on('chat message', function(msg){
+  // socket.on('new word', function(msg){
   //   $('#messages').append($('<li>').text(msg));
   // });
-		socket.on("reset", function(){
-			$('#messages').append($('<li>').text(msg));
-	});
+	$('restart').submit(function(){
+		socket.emit('restart');
+	})
+
+		socket.on("restart", function(){
+			$('#messages').append($('<p>').text(msg));
+		});
 	</script>
 </body>
 </html>
