--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,15 +23,15 @@
     $('#w').val('');
     return false;
   });
-  // socket.on('new word', function(msg){
-  //   $('#messages').append($('<li>').text(msg));
-  // });
+  socket.on('new word', function(msg){
+    $('#word').append($('<p>').text(msg));
+  });
 	$('restart').submit(function(){
 		socket.emit('restart');
 	})
 
 		socket.on("restart", function(){
-			$('#messages').append($('<p>').text(msg));
+			$('#word').append($('<p>').text(msg));
 		});
 	</script>
 </body>
