--- a/front_end/assets/stylesheets/hangman.css
+++ b/front_end/assets/stylesheets/hangman.css
@@ -1,4 +1,85 @@
+.logo {
+	text-align: center;
+}
+
+h1 {
+	text-align: center;
+	font-family: ;
+}
+
+
+.console,
+.gallows {
+	width: 400px;
+	height: 400px;
+	float: left;
+	margin: 10px;
+	padding: 5px;
+}
+
+.console {
+	background-color: purple
+}
+
+.game {
+	border-width: 2px;
+	width: 870px;
+	margin-right: auto;
+	margin-left: auto;
+
+
+}
+
+.wordInput,
+.guess {
+	margin: 5px;
+	padding: 5px;
+}
+
 .letterBoxes {
+
+}
+
+input[type="submit"] {
+	-moz-box-shadow:inset 0px 1px 0px 0px #a4e271;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #a4e271;
+	box-shadow:inset 0px 1px 0px 0px #a4e271;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89c403), color-stop(1, #77a809));
+	background:-moz-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:-webkit-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:-o-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:-ms-linear-gradient(top, #89c403 5%, #77a809 100%);
+	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89c403', endColorstr='#77a809',GradientType=0);
+	background-color:#89c403;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #74b807;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #528009;
+}
+input[type="submit"]:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77a809), color-stop(1, #89c403));
+	background:-moz-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:-webkit-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:-o-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:-ms-linear-gradient(top, #77a809 5%, #89c403 100%);
+	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77a809', endColorstr='#89c403',GradientType=0);
+	background-color:#77a809;
+}
+input[type="submit"]:active {
+	position:relative;
+	top:1px;
+}
 
 }
 
@@ -11,4 +92,15 @@
 p .letter {
 	display: none;
 	font-size: 18px;
+}
+
+.trash {
+	border: dashed 2px;
+	margin: 5px;
+	padding: 5px;
+}
+
+.gallows {
+	border: dashed 2px;
+	float: left;
 }
